# ImmunoPhenoDB

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
root-app/: Dockerfile  docker-compose.yml
root-app/flask-api/: Dockerfile  gunicorn_config.py  requirements.txt
root-app/flask-api/app/: app.py  engine.py  owl.pickle  wsgi.py
root-app/flask-api/config/: config.ini
root-app/nginx/: default.conf
root-app/node-api/: Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
root-app/node-api/controllers/: db_calls.ts
root-app/node-api/routes/: db_routes.ts
root-app/vite-project/: index.html  package-lock.json  package.json
root-app/vite-project/src/: App.css  App.tsx  main.tsx
root-app/vite-project/src/components/: Cart.tsx  MainPage.tsx  ModelResultsPlot.tsx  ModelResultsTable.tsx  NavBar.tsx  PlotlyLoad.tsx  RadioSearchField.tsx  SelectionTable.tsx  TissuesTable.tsx
root-app/vite-project/src/components/css/: plotly.css
src/immunophenodb/: config.ini  queries.py  singleR.py
