[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ImmunoPhenoDB"
version = "0.1.0"
description = "My package description"
license = {text = "MIT"}
authors = [
	{name="Pablo Cámara", email='pcamara@pennmedicine.upenn.edu'},
	]
readme = "README.md"
dependencies = [
	"pandas",
	"tqdm",
	"requests",
	"mysql-connector-python==8.0.32",
	"rpy2==3.5.11",
	"gtfparse==1.3.0",
	"pyensembl==2.2.8",
	]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"immunophenodb.data" = ["HPCA.rds"]